--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,199 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+main {
+  height: 100vh;
+  background: url("/images/bg-intro-desktop.png"), #ff7a7a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hero {
+  width: 80%;
+  margin: auto;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.offer {
+  background: #6055a5;
+  height: 7rem;
+  width: 100%;
+  border-radius: 10px;
+  margin: 3rem 0;
+  text-align: center;
+  padding: 2rem 0;
+  font-size: 1.8rem;
+  -webkit-box-shadow: 1px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.offer span {
+  font-weight: 600;
+}
+
+.left-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 40rem;
+          flex: 1 1 40rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.left-box h1 {
+  font-size: 5rem;
+}
+
+.left-box p {
+  font-size: 1.8rem;
+}
+
+.right-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 40rem;
+          flex: 1 1 40rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 5rem 2rem 8rem;
+}
+
+form input {
+  width: 90%;
+  height: 6rem;
+  border: 1px solid #b9b6d3;
+  border-radius: 5px;
+  margin-bottom: 1.5rem;
+  padding: 1rem 3rem;
+  position: relative;
+}
+
+.error-icon {
+  visibility: hidden;
+}
+
+.error-message {
+  visibility: hidden;
+}
+
+button {
+  background: #38cc8c;
+  border: none;
+  width: 90%;
+  height: 6rem;
+  border-radius: 5px;
+  color: white;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 2px;
+  -webkit-box-shadow: 1px 5px 0 rgba(30, 148, 97, 0.438);
+          box-shadow: 1px 5px 0 rgba(30, 148, 97, 0.438);
+  cursor: pointer;
+}
+
+button:hover {
+  background: #8ceec3;
+}
+
+::-webkit-input-placeholder {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+:-ms-input-placeholder {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+::-ms-input-placeholder {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+::placeholder {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+
+.form-wrapper {
+  background: white;
+  width: 100%;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  border-radius: 10px;
+  margin: 0 3rem 3rem;
+  -webkit-box-shadow: 1px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 1px 8px 0 rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.terms {
+  position: absolute;
+  bottom: 35px;
+  left: 90px;
+  color: #b9b6d3;
+  font-size: 1.2rem;
+}
+
+.terms span {
+  color: #ff7a7a;
+  font-weight: 700;
+}
+/*# sourceMappingURL=style.css.map */
