--- a/styles/style.css
+++ b/styles/style.css
@@ -106,31 +106,40 @@ form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 5rem 2rem 8rem;
+  padding: 5rem 5rem;
 }
 
-form input {
-  width: 90%;
+input {
+  width: 100%;
   height: 6rem;
   border: 1px solid #b9b6d3;
   border-radius: 5px;
   margin-bottom: 1.5rem;
   padding: 1rem 3rem;
-  position: relative;
+  outline: none;
 }
 
-.error-icon {
-  visibility: hidden;
+input:focus {
+  outline: none;
+  border: 1px solid #6055a5;
 }
 
-.error-message {
-  visibility: hidden;
+.form-control.error input {
+  border: 2px solid #ff7a7a;
+}
+
+.form-control.error.error-icon {
+  visibility: visible;
+}
+
+.form-control.error.error-message {
+  visibility: visible;
 }
 
 button {
   background: #38cc8c;
   border: none;
-  width: 90%;
+  width: 100%;
   height: 6rem;
   border-radius: 5px;
   color: white;
@@ -181,15 +190,36 @@ button:hover {
   margin: 0 3rem 3rem;
   -webkit-box-shadow: 1px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 1px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.form-control {
+  width: 100%;
+  padding-bottom: 1rem;
+  margin-bottom: 1rem;
   position: relative;
 }
 
-.terms {
+.error-icon {
   position: absolute;
-  bottom: 35px;
-  left: 90px;
+  top: 17px;
+  right: 10px;
+  visibility: hidden;
+}
+
+small {
+  font-size: 1.3rem;
+  color: #ff7a7a;
+  position: absolute;
+  top: 70px;
+  right: 20px;
+  font-weight: 600;
+  visibility: hidden;
+}
+
+.terms {
   color: #b9b6d3;
   font-size: 1.2rem;
+  margin: 3rem 3rem 0;
 }
 
 .terms span {
